samples/_failures_safe/1761130701_e16bb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ae99161.c: In function ‘main’:
./samples/SAFE/__tmp_0ae99161.c:187:12: error: missing terminating " character
  187 |     printf("
      |            ^
./samples/SAFE/__tmp_0ae99161.c:187:5: error: expected expression at end of input
  187 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_0ae99161.c:187:5: error: expected declaration or statement at end of input
